# gigl

./: Hotel.hs  Makefile  gigl.cabal  properties.lisp
Language/: GIGL.hs
Language/GIGL/: ACL2.hs
