name:    gigl
version: 0.0.0

category: Language

synopsis:    GIGL: a Global declarations, Imparative, Goto Language.
description: GIGL: a Global declarations, Imparative, Goto Language.

author:     Tom Hawkins  <tomahawkins@gmail.com>
maintainer: Tom Hawkins  <tomahawkins@gmail.com>

license: BSD3
license-file: LICENSE

build-type:    Simple
cabal-version: >= 1.9.2

library
  build-depends:
    base     >= 4.0,
    monadLib >= 3.7.2
  exposed-modules:
    Language.GIGL
    --Language.GIGL.ACL2
  ghc-options: -W

source-repository head
  type:     git
  location: git://github.com/tomahawkins/gigl.git

